# LibDS

./: CMakeLists.txt
lib/Socky/src/: socky.c
